--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <title>Vanakkam React</title>
 </head>
 <body>
-    <div id="root">
-        <h1>Hello World!</h1>
-    </div>
+    <div id="root"></div>
+    <script>
+        const heading = document.createElement("h1");
+        heading.innerHTML = "Hello world from JavaScript!";
+        // We have created the heading using js. Now need to put it inside the html.
+        const root = document.getElementById("root");
+        // The heading will go into the root element as a child of it.
+        root.appendChild(heading);
+    </script>
 </body>
 </html>
