--- a/index.html
+++ b/index.html
@@ -7,13 +7,10 @@
 </head>
 <body>
     <div id="root"></div>
-    <script>
-        const heading = document.createElement("h1");
-        heading.innerHTML = "Hello world from JavaScript!";
-        // We have created the heading using js. Now need to put it inside the html.
-        const root = document.getElementById("root");
-        // The heading will go into the root element as a child of it.
-        root.appendChild(heading);
-    </script>
+
+    <!-- CDN of React -->
+    <!-- Now we have React in our project! -->
+    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 </body>
 </html>
