--- a/index.html
+++ b/index.html
@@ -12,5 +12,15 @@
     <!-- Now we have React in our project! -->
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+
+    <!-- Let's inject React -->
+    <script>
+        // Creating a React element
+        const heading = React.createElement("h1", {}, "Hello World From React!")
+        // Creating the DOM ROOT element
+        const root = ReactDOM.createRoot(document.getElementById("root"));
+        // Rendering the created element in the DOM
+        root.render(heading);
+    </script>
 </body>
 </html>
