[Ex-5] - Moved the js code to a separate file

--- a/index.html
+++ b/index.html
@@ -14,13 +14,6 @@
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 
     <!-- Let's inject React -->
-    <script>
-        // Creating a React element
-        const heading = React.createElement("h1", {}, "Hello World From React!")
-        // Creating the DOM ROOT element
-        const root = ReactDOM.createRoot(document.getElementById("root"));
-        // Rendering the created element in the DOM
-        root.render(heading);
-    </script>
+    <script src="./App.js"></script>
 </body>
 </html>
