[Ex-15] - Fixed the error and suppressed the react-dom warning

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <div id="root"></div>
 
     <!-- Let's inject React -->
-    <script src="./App.js"></script>
+    <script type="module" src="./App.js"></script>
 </body>
 </html>
