[Ex-18] - Recap of the react render in App.js

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vanakkam React</title>
 </head>
 <body>
-    <div id="root"></div>
+    <div id="root">Not Rendered</div>
 
     <!-- Let's inject React -->
     <script type="module" src="./App.js"></script>
